<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".IntentActivity">

    <Button
        android:id="@+id/btn_intent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent1" />

    <Button
        android:id="@+id/btn_intent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent2" />

    <Button
        android:id="@+id/btn_intent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent3" />

</LinearLayout>